<resources>
    <string name="app_name">DineWise</string>
    <string name="signin">Sign In</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="search_for_a_location">Search for a location…</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_placeholder">%s</string>
    <string name="email_placeholder">%s</string>
    <string name="submit_review">Submit Review</string>
    <string name="rate_the_restaurant">Rate the restaurant</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="listRestaurants">List of Restaurants</string>
    <string name="nearby_restaurants">Nearby Restaurants</string>

</resources>