<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_2_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_review"
        android:icon="@drawable/baseline_check_circle_outline_24"
        android:title="@string/submit_review" />
    <item
        android:id="@+id/nav_listRestaurants"
        android:icon="@drawable/baseline_checklist_rtl_24"
        android:title="@string/listRestaurants" />

    <!-- Add more menu items with icons as needed -->
</menu>
